# pytroch_basic_model

./: .gitignore  CMakeLists.txt  LICENSE  README.md  model.cpp  netwrok.cpp  run.bat
